# cl-traits

./: .editorconfig  .gitlab-ci.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
cl-traits/: Cargo.toml
cl-traits-derive/: Cargo.toml
cl-traits-derive/src/: lib.rs
cl-traits-examples/: Cargo.toml  macros.rs  manual.rs
cl-traits/src/: array.rs  array_wrapper.rs  capacity.rs  capacity_upper_bound.rs  clear.rs  doc_tests.rs  insert.rs  length.rs  lib.rs  macros.rs  push.rs  remove.rs  retain.rs  storage.rs  swap.rs  truncate.rs  utils.rs  with_capacity.rs
examples/: Cargo.toml  macros.rs  manual.rs
scripts/: publish.sh  test-common.sh  test-nightly.sh  test.sh  tests-common.sh  tests-nightly.sh  tests.sh  tools.sh
