[dependencies]
proc-macro2 = "^0.4"
quote = "^0.6"
syn = "^0.15"

[lib]
proc-macro = true

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["development-tools"]
description = "Derives for cl-traits"
edition = "2018"
keywords = ["collections", "traits"]
license = "Apache-2.0"
name = "cl-traits-derive"
readme = "README.md"
repository = "https://gitlab.com/c410-f3r/cl-traits"
version = "0.3.0"
