[dependencies]
cl-traits = { features = ["alloc", "with-cl-traits-derive"], path = "../cl-traits" }

[[example]]
name = "macros"
path = "macros.rs"

[[example]]
name = "manual"
path = "manual.rs"

[package]
edition = "2018"
license = "Apache-2.0"
name = "cl-traits-examples"
publish = false
version = "0.0.0"
