[dependencies]
arrayvec = { default-features = false, optional = true, version = "0.5" }
cl-traits-derive = { optional = true, path = "../cl-traits-derive", version = "0.4" }
serde = { default-features = false, optional = true, version = "1.0" }
smallvec = { default-features = false, optional = true, version = "1.2" }
staticvec = { default-features = false, optional = true, version = "0.9" }

[features]
alloc = ["serde/alloc"]
const_generics = []
default = []
std = ["alloc", "arrayvec/std", "serde/std", "staticvec/std"]
with_arrayvec = ["arrayvec"]
with_derive = ["cl-traits-derive"]
with_serde = ["serde"]
with_smallvec = ["smallvec"]
with_staticvec = ["const_generics", "staticvec"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["development-tools"]
description = "Provides traits that describe collections"
edition = "2018"
keywords = ["collections", "traits"]
license = "Apache-2.0"
name = "cl-traits"
readme = "README.md"
repository = "https://github.com/c410-f3r/cl-traits"
version = "1.2.0"