[dependencies]
arrayvec = { default-features = false, optional = true, version = "0.5" }
cl-traits-derive = { optional = true, path = "../cl-traits-derive", version = "1.0" }
serde = { default-features = false, optional = true, version = "1.0" }
smallvec = { default-features = false, optional = true, version = "1.2" }
staticvec = { default-features = false, optional = true, version = "0.10" }
tinyvec = { default-features = false, optional = true, version = "0.3" }

[features]
alloc = ["serde/alloc", "tinyvec/alloc"]
const-generics = []
default = []
std = ["alloc", "arrayvec/std", "serde/std"]
with-arrayvec = ["arrayvec"]
with-cl-traits-derive = ["cl-traits-derive"]
with-serde = ["arrayvec/serde", "smallvec/serde", "serde"]
with-smallvec = ["smallvec"]
with-staticvec = ["const-generics", "staticvec", "staticvec/serde_support", "staticvec/std"]
with-tinyvec = ["tinyvec"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["development-tools"]
description = "Provides traits that describe collections"
edition = "2018"
keywords = ["collections", "traits"]
license = "Apache-2.0"
name = "cl-traits"
readme = "README.md"
repository = "https://github.com/c410-f3r/cl-traits"
version = "4.1.0"
