[dependencies]
arrayvec = { default-features = false, optional = true, version = "0.5" }
smallvec = { default-features = false, optional = true, version = "1.0" }
staticvec = { default-features = false, optional = true, version = "0.10" }
tinyvec = { default-features = false, optional = true, version = "1.0" }

[features]
alloc = []
default = []
std = ["alloc"]
with-arrayvec = ["arrayvec"]
with-smallvec = ["smallvec"]
with-staticvec = ["staticvec"]
with-tinyvec = ["tinyvec", "tinyvec/alloc"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["development-tools"]
description = "Provides traits that describe collections"
edition = "2018"
keywords = ["collections", "traits"]
license = "Apache-2.0"
name = "cl-traits"
readme = "README.md"
repository = "https://github.com/c410-f3r/cl-traits"
version = "4.1.0"
